Added bootstrap styles

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
     <%- include('../partials/header'); %>
@@ -11,8 +11,10 @@
 
 <main>
     <div class="jumbotron">
-        <h1>About page</h1>
-        <p>Welcome to my About page</p>
+        <div class="container">
+            <h1>About page</h1>
+            <p>Welcome to my About page</p>
+        </div>
     </div>
 </main>
 
