--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,18 +3,20 @@
 <head>
     <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body >
 
 <header>
     <%- include('../partials/header'); %>
 </header>
 
-<main>
-    <div class="jumbotron">
-        <h1>This is Home page</h1>
-        <p>Welcome to my node home page</p>
-    </div>
-</main>
+    <main>
+        <div class="jumbotron">
+            <div class="container">
+            <h1>This is Home page</h1>
+            <p>Welcome to my node home page</p>
+            </div>
+        </div>
+    </main>
 
 <footer>
     <%- include('../partials/footer'); %>
