--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -12,7 +12,7 @@
 <main>
     <div class="jumbotron">
         <div class="container">
-            <h1>About page</h1>
+            <h1 class="text-center">About Todo List</h1>
             <p>Welcome to my About page</p>
         </div>
     </div>
